--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/main
-spring.datasource.username=GioVyProX
-spring.datasource.password=giovy037
+spring.datasource.url=jdbc:mysql://localhost:3306/SpringDB
+spring.datasource.username=Giovanni
+spring.datasource.password=Giovy037!
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
